--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -270,7 +270,10 @@
     "        # unobserve the slider's value if this component is no longer displayed\n",
     "        return lambda: slider.unobserve(handle_change, \"value\")\n",
     "\n",
-    "    return html.div(slider_component, html.p(f\"ReactPy observes the value to be: \", value))"
+    "    return html.div(\n",
+    "        slider_component,\n",
+    "        html.p(f\"ReactPy observes the value to be: \", value)\n",
+    "    )"
    ]
   },
   {
