--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -271,8 +271,7 @@
     "        return lambda: slider.unobserve(handle_change, \"value\")\n",
     "\n",
     "    return html.div(\n",
-    "        slider_component,\n",
-    "        html.p(f\"ReactPy observes the value to be: \", value)\n",
+    "        slider_component, html.p(f\"ReactPy observes the value to be: \", value)\n",
     "    )"
    ]
   },
