add a use_trait hook attached to widget wrapper

--- a/notebooks/introduction.ipynb
+++ b/notebooks/introduction.ipynb
@@ -24,11 +24,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "901546cd31e04580810d8358cbf46d72",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget(Layout(ContextProvider(<function context at 0x7fb48b0a3600>)))"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from reactpy import component, html\n",
     "\n",
@@ -55,11 +71,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ee078bce581341f7826d8578cc03f971",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget(Layout(ContextProvider(<function context at 0x7fb48b0a3600>)))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from reactpy import component, html\n",
     "\n",
@@ -109,11 +141,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3e5123eaa6fe49fcb94f2527ec7665e8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget(Layout(ContextProvider(<function context at 0x7fb48b0a3600>)))"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import json\n",
     "from pathlib import Path\n",
@@ -164,9 +212,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "cb6e7a22534d4db6b1c6b826689cf739",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget(Layout(ContextProvider(<function context at 0x7fb48b0a3600>)))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from reactpy_jupyter import from_widget\n",
     "from ipywidgets import IntSlider\n",
@@ -182,38 +246,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's consider a ReactPy component that responds to and displays changes from an `ipywidgets.IntSlider`. The ReactPy component will need to accept an `IntSlider` instance as one of its arguments, convert it to a component with `from_widget`, declare state that will track the slider's value, and register a lister that will update that state via the slider's `IntSlider.observe()` method using an [\"effect\"](https://reactpy.dev/docs/reference/hooks-api.html#use-effect):"
+    "Let's consider a ReactPy component that mirrors an `ipywidgets.IntSlider` - that is, it displays a slider that moves when the `IntSlider` does and when moved alters the `IntSlider`. To accomplish this, the ReactPy component will need to accept an `IntSlider` instance as one of its arguments, convert it to a component with `from_widget`, and access the attributes it expects to change or that need to be changed via a `use_trait` method on the converted widget:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "from reactpy import use_effect\n",
     "from reactpy_jupyter import from_widget\n",
     "\n",
     "\n",
     "@component\n",
-    "def SliderObserver(slider):\n",
-    "    slider_component = from_widget(slider)\n",
-    "    value, set_value = use_state(0)\n",
-    "\n",
-    "    @use_effect\n",
-    "    def register_observer():\n",
-    "        def handle_change(change):\n",
-    "            set_value(change[\"new\"])\n",
-    "\n",
-    "        # observe the slider's value\n",
-    "        slider.observe(handle_change, \"value\")\n",
-    "        # unobserve the slider's value if this component is no longer displayed\n",
-    "        return lambda: slider.unobserve(handle_change, \"value\")\n",
-    "\n",
+    "def MirrorSlider(slider_widget):\n",
+    "    slider_component = from_widget(slider_widget)\n",
+    "    value, set_value = slider_component.use_trait(\"value\")\n",
     "    return html.div(\n",
-    "        slider_component, html.p(f\"ReactPy observes the value to be: \", value)\n",
+    "        html.h3(\"Jupyter Slider\"),\n",
+    "        # slider_component,\n",
+    "        html.h3(\"ReactPy Slider\"),\n",
+    "        html.input(\n",
+    "            {\n",
+    "                \"type\": \"range\",\n",
+    "                \"min\": slider_widget.min,\n",
+    "                \"max\": slider_widget.max,\n",
+    "                \"value\": value,\n",
+    "                \"on_change\": lambda event: set_value(event[\"target\"][\"value\"]),\n",
+    "            }\n",
+    "        ),\n",
     "    )"
    ]
   },
@@ -227,15 +290,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "48a4b16d9b7149fe9bbc8cbf5c20bd6c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "LayoutWidget(Layout(ContextProvider(<function context at 0x7fb48b0a3600>)))"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ipywidgets import IntSlider\n",
     "\n",
-    "SliderObserver(IntSlider(readout=False))"
+    "MirrorSlider(IntSlider(readout=False))"
    ]
   },
   {
@@ -248,19 +327,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4fc27c4a9ae04351b140ca4bcb15e5be",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(LayoutWidget(Layout(ContextProvider(<function context at 0x7fb48b0a3600>))), LayoutWidget(Layout…"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from ipywidgets import Box\n",
     "from reactpy_jupyter import to_widget\n",
     "\n",
     "slider = IntSlider(readout=False)\n",
-    "slider_observer_widget = to_widget(SliderObserver(slider))\n",
+    "slider_observer_widget = to_widget(MirrorSlider(slider))\n",
     "\n",
-    "Box([slider, slider_observer_widget])"
+    "Box([slider_observer_widget, slider_observer_widget])"
    ]
   },
   {
